# Cluster-chat-server

./: .gitignore  CMakeLists.txt  README.md  mysql.cnf
include/: public.h
include/client/: client.h
include/server/: server.h  service.h
include/server/db/: Connection.h  MySQLConnectionPool.h  database.h
include/server/model/: friend.h  friendmodel.h  group.h  groupmodel.h  groupuser.h  offlinemessage.h  offlinemessagemodel.h  user.h  usermodel.h
include/server/redis/: redis.h
src/client/: CMakeLists.txt  client.cpp  main.cpp
src/server/: CMakeLists.txt  main.cpp  server.cpp  service.cpp
src/server/db/: Connection.cpp  MySQLConnectionPool.cpp  database.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
